Fix image border radius after overflow visible

--- a/style.css
+++ b/style.css
@@ -149,6 +149,8 @@ body {
     flex: 1;
     width: 0;
     height: 100%;
+    border-top-left-radius: 0.6rem;
+    border-bottom-left-radius: 0.6rem;
   }
 
   .container-content {
